--- a/inventory-tracking-service/src/main/resources/application.yml
+++ b/inventory-tracking-service/src/main/resources/application.yml
@@ -1,21 +1,24 @@
 server:
-  port: 8080
+  port: 8070
 
 spring:
   application:
     name: inventory-tracking-service
   datasource:
-    url: jdbc:mysql://localhost:3306/inventoryserver?createDatabaseIfNotExist=true
+    url: jdbc:mysql://localhost:3306/inventoryserver
     username: root
     password: Bannu@123
-    driver-class-name: com.mysql.cj.jdbc.Driver   
-  
+  jpa:
+    show-sql: true
+    open-in-view: false
+    hibernate:
+      ddl-auto: update
 
     
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://localhost:8661/eureka
     registerWithEureka: true
     fetchRegistry: true
   instance:
@@ -26,3 +29,7 @@ management:
     web:
       exposure:
         include: '*'
+        
+        
+        
+  
