--- a/stockReplenishmentService/src/main/resources/application.yml
+++ b/stockReplenishmentService/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8082
+  port: 8072
 
 spring:
   application:
@@ -8,14 +8,14 @@ spring:
     hibernate:
       ddl-auto: update
   datasource:
-    url: jdbc:mysql://localhost:3306/stockService?createDatabaseIfNotExist=true
+    url: jdbc:mysql://localhost:3306/stockService
     username: root
     password: Bannu@123
     driver-class-name: com.mysql.cj.jdbc.Driver
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://localhost:8661/eureka
     registerWithEureka: true
     fetchRegistry: true
  
