--- a/supplierManagementService/src/main/resources/application.yml
+++ b/supplierManagementService/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8083
+  port: 8073
 
 spring:
   application:
@@ -8,13 +8,13 @@ spring:
     hibernate:
       ddl-auto: update
   datasource:
-    url: jdbc:mysql://localhost:3306/supplierserver?createDatabaseIfNotExist=true
+    url: jdbc:mysql://localhost:3306/supplierserver
     username: root
     password: Bannu@123
     driver-class-name: com.mysql.cj.jdbc.Driver
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://localhost:8661/eureka
     registerWithEureka: true
     fetchRegistry: true
